2015-07-15  Per Bothner  <per@bothner.com>

	* Compilation.java (process): Complain if both --module-static-run
	and -main (or equivalent) are both specified.

2015-06-24  Per Bothner  <per@bothner.com>

	* LambdaExp.java (reverseChildList, pushChild): New methods.
	* ChainLambdas.java (visitLambdaExp): Use new methods.

2015-06-15  Per Bothner  <per@bothner.com>

	* Compilation.java (process): Don't output class if subModulesOnly.
	This fixes a bug introduced 2015-04-24 and
	Savannah bug #45313 "Multiple libraries in one file".

2015-06-10  Per Bothner  <per@bothner.com>

	* Compilation.java (typeCharSequence): New static field.

2015-06-10  Per Bothner  <per@bothner.com>

	* FindTailCalls.java (visitApplyExp): Set inlineHome to immediate
	currentLambda, which fixes a problem with inlining.

2015-06-09  Andrea Bernardini <andrebask@gmail.com>

        * Compilation.java: Move again ANormalize pass before InlineCalls.
        (classTypeComparator): New field used in findNamedClass.
        (classesArrayIsSorted): New field used in addClass and findNamedClass.
        (findNamedClass): Use binary search when the classes are more then 1.
        (registerClass): set classesArrayIsSorted to false when adding a class.

2015-06-09  Andrea Bernardini <andrebask@gmail.com>

        * CaseExp.java (visitChildren): Fix in case side effects are involved.

2015-06-08  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (doFixUnsigned): New flag.
	(setReturnType): set it.
	(compileInvoke): Take doFixUnsigned parameter; if true
	call CodeAttr.fixUnsigned to fixup ubyte/ushort from Java methods.

	* PrimProcedure.java (<init>): New constructor.

	* ConsumerTarget.java (compileUsingValues): New method.
	(compileUsingConsumer/3):  Use compileUsingValues.

	* ProcInitializer.java (emitLoadModuleMethod): Only set
	comp.moduleInstanceMainField if not already set.  This avoids
	creating a duplicate field.

2015-06-03  Per Bothner  <per@bothner.com>
