@@ -1,3 +1,8 @@
+2015-07-17  Per Bothner  <per@bothner.com>
+
+	Use an explicit flag to mark a LetExp created for a <body>.
+	* LetExp.java (IS_BODY_SCOPE): New constant.
+
 2015-07-15  Per Bothner  <per@bothner.com>
 
 	* Compilation.java (process): Complain if both --module-static-run
